Fixed the make build, which was broken with all the recent file shuffling.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@436 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/fx/Makefile_PC
+++ b/fx/Makefile_PC
@@ -46,8 +46,8 @@ SRC				 := \
 		src/cfxSurface.cpp \
 		src/cfxTechnique.cpp 
 
-INCLUDE_DIR		 += $(ROOT_DIR)/../COLLADA_DOM/include
-INCLUDE_DIR		 += $(ROOT_DIR)/../COLLADA_DOM/include/$(COLLADA_DOM_VERSION)
+INCLUDE_DIR		 += $(ROOT_DIR)/../dom/include
+INCLUDE_DIR		 += $(ROOT_DIR)/../dom/include/$(COLLADA_DOM_VERSION)
 #INCLUDE_DIR     += /usr/include/libxml2
 INCLUDE_DIR      += $(ROOT_DIR)/include
 
