--- a/rt/platform/linux/viewer/Makefile
+++ b/rt/platform/linux/viewer/Makefile
@@ -31,20 +31,20 @@ CCOPT		+= -DCRT_WORDS_BIGENDIAN -DCOLLADA_DOM_VERSION -DCRT_PLATFORM_INCLUDE=\"C
 #CCOPT            += -DDEFAULT_CG_PLATFORM='"PC-OGL"'
 
 #dom
-INCLUDE_DIR	+= $(ROOT_DIR)/../COLLADA_DOM/include
-INCLUDE_DIR	+= $(ROOT_DIR)/../COLLADA_DOM/include/$(COLLADA_DOM_VERSION)
+INCLUDE_DIR	+= $(ROOT_DIR)/../dom/include
+INCLUDE_DIR	+= $(ROOT_DIR)/../dom/include/$(COLLADA_DOM_VERSION)
 #fx
-INCLUDE_DIR	+= $(ROOT_DIR)/../COLLADA_FX/include
+INCLUDE_DIR	+= $(ROOT_DIR)/../fx/include
 #rt
 INCLUDE_DIR	+= $(ROOT_DIR)/include/$(COLLADA_DOM_VERSION)
 INCLUDE_DIR	+= $(ROOT_DIR)/include
 #bullet
-INCLUDE_DIR	+= $(ROOT_DIR)/../external-libs/bullet/src
+INCLUDE_DIR	+= $(ROOT_DIR)/external-libs/bullet/src
 
 
-EXE_LCOPT	+= -L$(ROOT_DIR)/../COLLADA_FX/lib/$(CONF_NAME)
+EXE_LCOPT	+= -L$(ROOT_DIR)/../fx/lib/$(CONF_NAME)
 EXE_LCOPT	+= -L$(ROOT_DIR)/lib/$(CONF_NAME)
-EXE_LCOPT	+= -L$(ROOT_DIR)/../external-libs/bullet/lib/$(CONF_NAME)
+EXE_LCOPT	+= -L$(ROOT_DIR)/external-libs/bullet/lib/$(CONF_NAME)
 
 colladaVersion := $(COLLADA_DOM_VERSION)
 colladaVersionNoDots := $(subst .,,$(colladaVersion))
@@ -52,7 +52,7 @@ debugSuffix := $(if $(findstring 1,$(RELEASE)),-d)
 domLib := libcollada$(colladaVersionNoDots)dom$(debugSuffix).a
 
 LCOPT	+=   -lcollada_Cfx -lcollada_Crt -lcollada_Cfx
-LCOPT	+=   $(ROOT_DIR)/../COLLADA_DOM/build/$(PLATFORM_NAME)-$(colladaVersion)$(debugSuffix)/$(domLib)
+LCOPT	+=   $(ROOT_DIR)/../dom/build/$(PLATFORM_NAME)-$(colladaVersion)$(debugSuffix)/$(domLib)
 LCOPT	+=   -lglut -lCg -lCgGL -lGL -lGLU -lm -lpthread
 LCOPT	+=   -lcollada_bullet
 LCOPT	+=   -lxml2
