--- a/rt/projects/VC++8/COLLADA_RT_COMMON.vcproj
+++ b/rt/projects/VC++8/COLLADA_RT_COMMON.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..\..\..\external-libs\devIL\win32\include&quot;;..\..\..\COLLADA_DOM\include;..\..\..\COLLADA_DOM\include\1.4;../../include;../../include/1.4;..\..\..\COLLADA_FX\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\external-libs\bullet\src&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\external-libs\devIL\win32\include&quot;;..\..\..\dom\include;..\..\..\dom\include\1.4;../../include;../../include/1.4;..\..\..\fx\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\external-libs\bullet\src&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CRT_PLATFORM_INCLUDE=\&quot;Crt/CrtWin.h\&quot;;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;..\..\..\external-libs\devIL\win32\include&quot;;..\..\..\COLLADA_DOM\include;..\..\..\COLLADA_DOM\include\1.4;../../include;../../include/1.4;..\..\..\COLLADA_FX\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\external-libs\bullet\src&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\external-libs\devIL\win32\include&quot;;..\..\..\dom\include;..\..\..\dom\include\1.4;../../include;../../include/1.4;..\..\..\fx\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\external-libs\bullet\src&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;CRT_PLATFORM_INCLUDE=\&quot;Crt/CrtWin.h\&quot;;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
