--- a/dom/projects/vc8/dom.vcproj
+++ b/dom/projects/vc8/dom.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\..\external-libs\libxml2\win32\include&quot;;&quot;..\..\..\external-libs\tinyxml&quot;;&quot;..\..\..\external-libs\pcre&quot;"
+				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\win32\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;DOM_EXPORT;DOM_INCLUDE_LIBXML;PCRE_STATIC"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -65,7 +65,7 @@
 				AdditionalDependencies="libxml2_a.lib zlib.lib wsock32.lib pcre-d.lib pcrecpp-d.lib"
 				OutputFile="$(OutDir)\libcollada14dom20-d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;..\..\..\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\external-libs\tinyxml\lib\vc8&quot;;&quot;..\..\..\external-libs\pcre\lib\vc8&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\external-libs\libxml2\win32\lib&quot;;&quot;..\..\external-libs\tinyxml\lib\vc8&quot;;&quot;..\..\external-libs\pcre\lib\vc8&quot;"
 				IgnoreDefaultLibraryNames="msvcrt"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
@@ -124,7 +124,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\..\external-libs\libxml2\win32\include&quot;;&quot;..\..\..\external-libs\tinyxml&quot;;&quot;..\..\..\external-libs\pcre&quot;"
+				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\win32\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;DOM_EXPORT;DOM_INCLUDE_LIBXML;PCRE_STATIC"
 				RuntimeLibrary="2"
 				DisableLanguageExtensions="true"
@@ -147,7 +147,7 @@
 				AdditionalDependencies="libxml2_a.lib zlib.lib wsock32.lib pcre.lib pcrecpp.lib"
 				OutputFile="$(OutDir)\libcollada14dom20.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;..\..\..\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\external-libs\tinyxml\lib\vc8&quot;;&quot;..\..\..\external-libs\pcre\lib\vc8&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\external-libs\libxml2\win32\lib&quot;;&quot;..\..\external-libs\tinyxml\lib\vc8&quot;;&quot;..\..\external-libs\pcre\lib\vc8&quot;"
 				GenerateDebugInformation="false"
 				SubSystem="0"
 				OptimizeReferences="2"
