--- a/dom/projects/vc8/domTest.vcproj
+++ b/dom/projects/vc8/domTest.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\..\external-libs\boost&quot;"
+				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -64,7 +64,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libcollada14dom20-d.lib libboost_filesystem-d.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\..\external-libs\boost\lib\vc8&quot;"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\external-libs\boost\lib\vc8&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -120,7 +120,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\..\external-libs\boost&quot;"
+				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB"
 				RuntimeLibrary="2"
 				DisableLanguageExtensions="true"
@@ -142,7 +142,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libcollada14dom20.lib libboost_filesystem.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\..\external-libs\boost\lib\vc8&quot;"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;..\..\external-libs\boost\lib\vc8&quot;"
 				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
