--- a/fx/projects/VC++8/COLLADA_FX.vcproj
+++ b/fx/projects/VC++8/COLLADA_FX.vcproj
@@ -39,7 +39,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../../include;..\..\..\COLLADA_DOM\include;..\..\..\COLLADA_DOM\include\1.4;&quot;$(CG_INC_PATH)&quot;"
+				AdditionalIncludeDirectories="../../include;..\..\..\dom\include;..\..\..\dom\include\1.4;&quot;$(CG_INC_PATH)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;DEFAULT_CG_PLATFORM=\&quot;PC-OGL\&quot;;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -103,7 +103,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/wd4311 /wd4312 "
 				Optimization="0"
-				AdditionalIncludeDirectories="../../include;..\..\..\COLLADA_DOM\include;..\..\..\COLLADA_DOM\include\1.4;&quot;$(CG_INC_PATH)&quot;"
+				AdditionalIncludeDirectories="../../include;..\..\..\dom\include;..\..\..\dom\include\1.4;&quot;$(CG_INC_PATH)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;DEFAULT_CG_PLATFORM=\&quot;PC-OGL\&quot;;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
