--- a/rt/projects/VC++8/COLLADA_RT_VIEWER.vcproj
+++ b/rt/projects/VC++8/COLLADA_RT_VIEWER.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..\..\..\external-libs\devil\win32\include&quot;;..\..\..\COLLADA_DOM\include;..\..\..\COLLADA_DOM\include\1.4;../../include;../../include/1.4;..\..\..\COLLADA_FX\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\external-libs\bullet\src&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\external-libs\devil\win32\include&quot;;..\..\..\dom\include;..\..\..\dom\include\1.4;../../include;../../include/1.4;..\..\..\fx\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\external-libs\bullet\src&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -62,7 +62,7 @@
 				AdditionalDependencies="COLLADA_RT_COMMON.lib COLLADA_RT_1.4.lib libcfxLoader.lib libcollada14dom20-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib libbullet.lib pcre-d.lib pcrecpp-d.lib"
 				OutputFile="../../bin/vc8_1.4_debug/$(ProjectName).exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../../lib/vc8_1.4_debug;&quot;..\..\..\COLLADA_DOM\build\vc8-1.4-d&quot;;..\..\..\COLLADA_FX\lib\vc8_1.4_debug;&quot;..\..\..\external-libs\bullet\lib\vc8_1.4_debug&quot;;&quot;..\..\..\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\external-libs\pcre\lib\vc8\&quot;"
+				AdditionalLibraryDirectories="../../lib/vc8_1.4_debug;&quot;..\..\..\dom\build\vc8-1.4-d&quot;;..\..\..\fx\lib\vc8_1.4_debug;&quot;..\..\external-libs\bullet\lib\vc8_1.4_debug&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8\&quot;"
 				GenerateManifest="true"
 				ManifestFile="$(IntDir)\$(TargetFileName).intermediate.manifest"
 				IgnoreDefaultLibraryNames="msvcrt"
@@ -93,7 +93,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="xcopy /Y ..\..\..\external-libs\devil\win32\lib\DevIL.dll $(TargetDir)"
+				CommandLine="xcopy /Y ..\..\external-libs\devil\win32\lib\DevIL.dll $(TargetDir)"
 			/>
 		</Configuration>
 		<Configuration
@@ -120,7 +120,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;..\..\..\external-libs\devil\win32\include&quot;;..\..\..\COLLADA_DOM\include;..\..\..\COLLADA_DOM\include\1.4;../../include;../../include/1.4;..\..\..\COLLADA_FX\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\external-libs\bullet\src&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\external-libs\devil\win32\include&quot;;..\..\..\dom\include;..\..\..\dom\include\1.4;../../include;../../include/1.4;..\..\..\fx\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\external-libs\bullet\src&quot;"
 				PreprocessorDefinitions="CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				WarningLevel="4"
@@ -139,7 +139,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="COLLADA_RT_COMMON.lib COLLADA_RT_1.4.lib libcfxLoader.lib libcollada14dom20-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib libbullet.lib pcre.lib pcrecpp.lib"
 				OutputFile="../../bin/vc8_1.4/$(ProjectName).exe"
-				AdditionalLibraryDirectories="../../lib/vc8_1.4;&quot;..\..\..\COLLADA_DOM\build\vc8-1.4&quot;;..\..\..\COLLADA_FX\lib\vc8_1.4;&quot;..\..\..\external-libs\bullet\lib\vc8_1.4&quot;;&quot;..\..\..\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\external-libs\pcre\lib\vc8&quot;"
+				AdditionalLibraryDirectories="../../lib/vc8_1.4;&quot;..\..\..\dom\build\vc8-1.4&quot;;..\..\..\fx\lib\vc8_1.4;&quot;..\..\external-libs\bullet\lib\vc8_1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8&quot;"
 				GenerateDebugInformation="false"
 			/>
 			<Tool
@@ -165,7 +165,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="xcopy /Y ..\..\..\external-libs\devil\win32\lib\DevIL.dll $(TargetDir)"
+				CommandLine="xcopy /Y ..\..\external-libs\devil\win32\lib\DevIL.dll $(TargetDir)"
 			/>
 		</Configuration>
 	</Configurations>
