Adding daeUtils.h/daeUtils.cpp to the Visual Studio project files.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@448 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/projects/vc8/dom.vcproj
+++ b/dom/projects/vc8/dom.vcproj
@@ -310,6 +310,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\dae\daeUtils.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\dae\domAny.cpp"
 				>
 			</File>
@@ -469,6 +473,10 @@
 			</File>
 			<File
 				RelativePath="..\..\include\dae\daeURI.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\dae\daeUtils.h"
 				>
 			</File>
 			<File
