Finished moving the exporter sample to the automated test suite, and fixed a bug in the RT makefiles.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@451 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/rt/platform/linux/viewer/Makefile
+++ b/rt/platform/linux/viewer/Makefile
@@ -46,9 +46,12 @@ EXE_LCOPT	+= -L$(ROOT_DIR)/../fx/lib/$(CONF_NAME)
 EXE_LCOPT	+= -L$(ROOT_DIR)/lib/$(CONF_NAME)
 EXE_LCOPT	+= -L$(ROOT_DIR)/external-libs/bullet/lib/$(CONF_NAME)
 
+ifneq ($(RELEASE),1)
+debugSuffix := -d
+endif
+
 colladaVersion := $(COLLADA_DOM_VERSION)
 colladaVersionNoDots := $(subst .,,$(colladaVersion))
-debugSuffix := $(if $(findstring 1,$(RELEASE)),-d)
 domLib := libcollada$(colladaVersionNoDots)dom$(debugSuffix).a
 
 LCOPT	+=   -lcollada_Cfx -lcollada_Crt -lcollada_Cfx
