Fixed a broken Windows static lib and added export.cpp to domTest on Windows.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@455 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/projects/vc8/dom-static.vcproj
+++ b/dom/projects/vc8/dom-static.vcproj
@@ -274,6 +274,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\dae\daeUtils.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\dae\domAny.cpp"
 				>
 			</File>
