Tweaked the makefiles to support a custom settings file in the ~/collada-dom folder. This makes applying your custom build settings to multiple branches of the DOM easier.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@478 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/Makefile
+++ b/dom/Makefile
@@ -48,8 +48,8 @@ parser := libxml
 # file: Set this to the name of a source file (eg 'dae.cpp') to build just that file
 file :=
 
-# If you want to change the default values of the above params, you can either modify them
-# directly by changing the text above or put the variable assignments in make/customSettings.mk
+# Include any custom build settings
+-include ~/.collada-dom/customSettings.mk
 -include make/customSettings.mk
 
 -include make/installPrefix.mk
