--- a/dom/projects/vc8/domTest.vcproj
+++ b/dom/projects/vc8/domTest.vcproj
@@ -42,7 +42,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;DOM_DYNAMIC;BOOST_ALL_NO_LIB"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				DisableLanguageExtensions="true"
