Updates to make the code generator work with the 1.5 schema
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@557 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/Makefile
+++ b/dom/Makefile
@@ -42,7 +42,7 @@ project := all
 # Release/debug configuration: 'release', 'debug', or 'all'
 conf := release
 
-# Collada version: No other versions supported for now
+# Collada version: '1.4', '1.5', or 'all'
 colladaVersion := 1.4
 
 # parser: 'libxml', 'tinyxml', or 'all'.
