Add output file with -d.lib
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@580 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/rt/projects/vc8-PS3/rt.vcproj
+++ b/rt/projects/vc8-PS3/rt.vcproj
@@ -57,7 +57,7 @@
 			<Tool
 				Name="VCLibrarianTool"
 				AdditionalOptions=""
-				OutputFile="$(OutDir)/$(ProjectName).lib"
+				OutputFile="$(OutDir)/$(ProjectName)-d.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
