update dom project vc8-PS3 output filename
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@582 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/projects/vc8-PS3/dom.vcproj
+++ b/dom/projects/vc8-PS3/dom.vcproj
@@ -56,7 +56,7 @@
 			<Tool
 				Name="VCLibrarianTool"
 				AdditionalOptions=""
-				OutputFile="$(OutDir)/dom-d.lib"
+				OutputFile="$(OutDir)/$(ProjectName)-d.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
