--- a/viewer/projects/vc8-PS3/viewer.vcproj
+++ b/viewer/projects/vc8-PS3/viewer.vcproj
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-O2 -Wall -fno-exceptions -fno-rtti"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;..\..\..\fx\include;&quot;..\..\..\rt\external-libs\bullet\src&quot;;..\..\..\rt\include;."
-				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;"
+				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
