--- a/viewer/projects/vc8-Win/viewer.vcproj
+++ b/viewer/projects/vc8-Win/viewer.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\src&quot;;&quot;$(CG_INC_PATH)&quot;"
+				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\include&quot;;&quot;$(CG_INC_PATH)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -59,10 +59,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom21-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib bullet-d.lib pcre-d.lib pcrecpp-d.lib"
+				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom21-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib bullet-MDd.lib pcre-d.lib pcrecpp-d.lib"
 				OutputFile="$(OutDir)\$(ProjectName)-d.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc8-Win-d&quot;;&quot;..\..\..\dom\build\vc8-1.4-d&quot;;&quot;..\..\..\fx\build\vc8-Win-d&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8\&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc8-Win-d&quot;;&quot;..\..\..\dom\build\vc8-1.4-d&quot;;&quot;..\..\..\fx\build\vc8-Win-d&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8\&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;"
 				GenerateManifest="true"
 				ManifestFile="$(IntDir)\$(TargetFileName).intermediate.manifest"
 				IgnoreDefaultLibraryNames="msvcrt"
@@ -120,7 +120,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\src&quot;;&quot;$(CG_INC_PATH)&quot;"
+				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\include&quot;;&quot;$(CG_INC_PATH)&quot;"
 				PreprocessorDefinitions="CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				WarningLevel="4"
@@ -137,9 +137,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rt.lib fx.lib libcollada14dom21-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib bullet.lib pcre.lib pcrecpp.lib"
+				AdditionalDependencies="rt.lib fx.lib libcollada14dom21-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib bullet-MD.lib pcre.lib pcrecpp.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
-				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8&quot;;&quot;..\..\..\fx\build\vc8-Win&quot;;&quot;..\..\..\rt\build\vc8-Win&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;"
+				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8&quot;;&quot;..\..\..\fx\build\vc8-Win&quot;;&quot;..\..\..\rt\build\vc8-Win&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;"
 				GenerateDebugInformation="false"
 			/>
 			<Tool
