--- a/dom/projects/vc8-1.5/domTest.vcproj
+++ b/dom/projects/vc8-1.5/domTest.vcproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?><VisualStudioProject Keyword="Win32Proj" Name="domTest" ProjectGUID="{32FA559B-77AB-4344-B102-BB671A299561}" ProjectType="Visual C++" RootNamespace="domTest" Version="8.00">
+<?xml version="1.0" ?><VisualStudioProject Keyword="Win32Proj" Name="domTest" ProjectGUID="{32FA559B-77AB-4344-B102-BB671A299561}" ProjectType="Visual C++" RootNamespace="domTest" Version="8,00">
 	<Platforms>
 		<Platform Name="Win32"/>
 	</Platforms>
@@ -50,15 +50,15 @@
 	</References>
 	<Files>
 		<Filter Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx" Name="Source Files" UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
-			<File RelativePath="..\..\test\domTest.cpp">
+			<File RelativePath="..\..\test\1.5\domTest.cpp">
 			</File>
-			<File RelativePath="..\..\test\export.cpp">
+			<File RelativePath="..\..\test\1.5\export.cpp">
 			</File>
-			<File RelativePath="..\..\test\integrationExample.cpp">
+			<File RelativePath="..\..\test\1.5\integrationExample.cpp">
 			</File>
 		</Filter>
 		<Filter Filter="h;hpp;hxx;hm;inl;inc;xsd" Name="Header Files" UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File RelativePath="..\..\test\domTest.h">
+			<File RelativePath="..\..\test\1.5\domTest.h">
 			</File>
 		</Filter>
 	</Files>
