[dom 1.5] updated makefiles to include minizip. changed parts of tmp dir handling to work on linux.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@640 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/Makefile
+++ b/dom/Makefile
@@ -76,7 +76,7 @@ ifneq ($(filter-out x86 ppc,$(archs)),)
 $(error Invalid setting arch=$(arch))
 endif
 
-$(eval $(call setBuildVar,project,dom domTest))
+$(eval $(call setBuildVar,project,minizip dom domTest))
 $(eval $(call setBuildVar,colladaVersion,1.4 1.5))
 $(eval $(call setBuildVar,conf,debug release))
 $(eval $(call setBuildVar,parser,libxml tinyxml))
