set host to either linux or windows where we will decide PS3_SDK_ROOT to use either CELL_SDK_ROOT or SCE_PS3_ROOT
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@661 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/viewer/Makefile
+++ b/viewer/Makefile
@@ -25,6 +25,12 @@ os := windows
 endif
 endif
 
+# default host to be linux, if you are building ps3 target in windows host, host will be windows
+host := linux
+ifneq ($(or $(shell uname | grep -i cygwin),$(shell uname | grep -i mingw)),)
+host := windows
+endif
+
 # nativeArch: For internal use. Don't override this, instead override 'arch'.
 nativeArch := x86
 ifneq ($(shell uname -p | grep -i powerpc),)
