[linux mac] fix build breakage, modify Makefile to build minizip before building DOM
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@668 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/Makefile
+++ b/dom/Makefile
@@ -76,7 +76,7 @@ endif
 
 # Initialize the build variables
 define setBuildVar
-$(1)s := $(sort $(subst all,$(2),$($(1))))
+$(1)s := $(subst all,$(2),$($(1)))
 ifneq ($$(filter-out $(2),$$($(1)s)),)
 $$(error Invalid setting: $(1)=$($(1)))
 endif
