--- a/fx/projects/vc8-PS3/fx.vcproj
+++ b/fx/projects/vc8-PS3/fx.vcproj
@@ -40,7 +40,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-g -O0 -Wall -fno-exceptions -fno-rtti"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;..\..\include;..\..\..\dom\include;..\..\..\dom\include\1.4"
-				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;DEFAULT_CG_PLATFORM=\&quot;PS3\&quot;"
+				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;DEFAULT_CG_PLATFORM=\&quot;PS3\&quot;;NO_BOOST"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
@@ -101,7 +101,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-O2 -Wall -fno-exceptions -fno-rtti"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;..\..\include;..\..\..\dom\include;..\..\..\dom\include\1.4"
-				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;DEFAULT_CG_PLATFORM=\&quot;PS3\&quot;"
+				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;DEFAULT_CG_PLATFORM=\&quot;PS3\&quot;;NO_BOOST"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
