--- a/rt/projects/vc8-PS3/rt.vcproj
+++ b/rt/projects/vc8-PS3/rt.vcproj
@@ -40,7 +40,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-g -O0 -Wall -fno-exceptions -fno-rtti"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;..\..\include\1.4;..\..\include;..\..\..\fx\include;..\..\..\dom\include;..\..\..\dom\include\1.4"
-				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET;NO_BOOST"
+				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET;NO_BOOST;CRT_WORDS_BIGENDIAN"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
@@ -101,7 +101,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-O2 -Wall -fno-exceptions -fno-rtti"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;..\..\include\1.4;..\..\include;..\..\..\fx\include;..\..\..\dom\include;..\..\..\dom\include\1.4;&quot;..\..\external-libs\bullet\src&quot;"
-				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET;NO_BOOST"
+				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET;NO_BOOST;CRT_WORDS_BIGENDIAN"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
