--- a/viewer/projects/vc9-Win/viewer.vcproj
+++ b/viewer/projects/vc9-Win/viewer.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom21-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib bullet-MDd.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib libboost_filesystem-d.lib"
+				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom21-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib DevIL.lib bullet-MD.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib libboost_filesystem-d.lib"
 				OutputFile="$(OutDir)\$(ProjectName)-d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc9-Win-d&quot;;&quot;..\..\..\dom\build\vc9-1.4-d&quot;;&quot;..\..\..\fx\build\vc9-Win-d&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc9\&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\vc9&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
